...

          {/* Title */}
          <Animated.View style={titleStyle}>
            <Text
              style={{
                fontSize: 26,
                fontWeight: "900",
                color: "#FFFFFF",
                textAlign: "center",
                lineHeight: 34,
                marginBottom: 16,
                fontFamily: "Nunito-Black",
              }}
...
